--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="2.4"
-	xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-	<display-name>UglyFaceContest</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
+ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
 
-	<context-param>
-		<description>Vaadin production mode</description>
-		<param-name>productionMode</param-name>
-		<param-value>false</param-value>
-	</context-param>
-	<servlet>
-		<servlet-name>UglyFaceContest</servlet-name>
-		<servlet-class> us.galleryw.ufc.UfcServlet</servlet-class>
-		<init-param>
-			<param-name>UI</param-name>
-			<param-value> us.galleryw.ufc.UfcUI</param-value>
-		</init-param>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>UglyFaceContest</servlet-name>
-		<url-pattern>/*</url-pattern>
-	</servlet-mapping>
+ <display-name>UglyFaceContest</display-name>
+
+ <context-param>
+  <description>Vaadin production mode</description>
+  <param-name>productionMode</param-name>
+  <param-value>false</param-value>
+ </context-param>
+ <servlet>
+  <servlet-name>UglyFaceContest</servlet-name>
+  <servlet-class>us.galleryw.ufc.UfcServlet</servlet-class>
+  <init-param>
+   <param-name>UI</param-name>
+   <param-value> us.galleryw.ufc.UfcUI</param-value>
+  </init-param>
+ </servlet>
+ <servlet-mapping>
+  <servlet-name>UglyFaceContest</servlet-name>
+  <url-pattern>/*</url-pattern>
+ </servlet-mapping>
 
 </web-app>
