--- a/pom.xml
+++ b/pom.xml
@@ -128,11 +128,13 @@
    <version>${vaadin.version}</version>
    <scope>provided</scope>
   </dependency>
+  <!-- 
   <dependency>
    <groupId>com.vaadin.addon</groupId>
    <artifactId>vaadin-charts</artifactId>
    <version>2.0.0</version>
   </dependency>
+   -->
   <dependency>
    <groupId>org.vaadin.addons</groupId>
    <artifactId>googleanalyticstracker</artifactId>
@@ -197,6 +199,12 @@
    <artifactId>hibernate-core</artifactId>
    <version>4.1.7.Final</version>
   </dependency>
+  <dependency>
+  <groupId>org.hibernate</groupId>
+  <artifactId>hibernate-validator-annotation-processor</artifactId>
+  <version>4.1.0.Final</version>
+</dependency>
+  
   <dependency>
    <groupId>log4j</groupId>
    <artifactId>log4j</artifactId>
